Correctly aligned contact padding

--- a/styles.css
+++ b/styles.css
@@ -419,17 +419,15 @@ h1 {
     justify-content: center;
     max-width: 65%;
     text-align: left;
-    padding-bottom: 50px;
-}
-
-.contact__content h1 {
-    padding-left: 50px;
+    padding: 0 0 50px 70px;
+    /* padding-bottom: 50px;
+    padding-left: 70px; */
 }
 
 .contact__links {
     display: flex;
     flex-direction: row;
-    padding-left: 90px;
+    padding-left: 20px;
     justify-content: left;
     align-items: center;
 }
